syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/begemot/lib/trivial_tagger/proto";
option java_package = "ru.yandex.alice.alice.begemot.lib.trivial_tagger.proto";

message TTrivialTaggerConfig {
    message TSlot {
        string Name = 1 [json_name = "name"];
        string Type = 2 [json_name = "type"];
        string Value = 3 [json_name = "value"];
    }

    message TFrame {
        string Name = 1 [json_name = "name"];
        repeated TSlot Slots = 2 [json_name = "slots"];
        repeated string Experiments = 3 [json_name = "experiments"];
    }

    repeated TFrame Frames = 1 [json_name = "frames"];
    string Language = 2 [json_name = "language"];
}
